--- a/index.html
+++ b/index.html
@@ -8,3 +8,11 @@
     <title> Wheather App</title>
    
 </head>
+
+<body>
+    <div class="container">
+        <div class="search-box">
+            <i class="fa-solid fa-location-dot"></i>
+            <input type="text" placeholder="Enter your location">
+            <button class="fa-solid fa-magnifying-glass"></button>
+        </div>
