Add script links for FontAwesome icons and JavaScript functionality

--- a/index.html
+++ b/index.html
@@ -48,3 +48,9 @@
         </div>
             
         </div>
+        <script src="https://kit.fontawesome.com/8a3c346f1c.js" crossorigin="anonymous"></script>
+        <script src="index.js"></script>
+        
+</body>
+
+</html>
